[gd_scene load_steps=15 format=3 uid="uid://clgdaw3ciqt1l"]

[ext_resource type="Texture2D" uid="uid://dd4nc3kh41wlv" path="res://Assets/Bg.png" id="1_4qacy"]
[ext_resource type="Script" path="res://Scripts/Fight.gd" id="2_m1e6i"]
[ext_resource type="FontFile" uid="uid://b38a3j4lm3y7y" path="res://Assets/pixel_font.ttf" id="3_j7cvy"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="3_v5ya7"]
[ext_resource type="Script" path="res://Scripts/Ball.gd" id="4_3u0n0"]
[ext_resource type="Script" path="res://Scripts/CPU.gd" id="4_e7arr"]
[ext_resource type="Script" path="res://Scripts/Trail2D.gd" id="6_bcy2f"]
[ext_resource type="Script" path="res://Scripts/Camera2D.gd" id="7_j2nt2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8i1bb"]
size = Vector2(20, 120)

[sub_resource type="Curve" id="Curve_iaqog"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_arlr6"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g85cf"]
size = Vector2(1280, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hq05p"]
size = Vector2(1280, 52)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jrrla"]
size = Vector2(64, 648)

[node name="Main" type="Sprite2D"]
texture_filter = 1
texture = ExtResource("1_4qacy")
centered = false
script = ExtResource("2_m1e6i")

[node name="Player" type="StaticBody2D" parent="."]
position = Vector2(50, 324)
script = ExtResource("3_v5ya7")

[node name="ColorRect" type="ColorRect" parent="Player"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 20.0
offset_bottom = 60.0
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_8i1bb")

[node name="CPU" type="StaticBody2D" parent="."]
position = Vector2(1082, 324)
script = ExtResource("4_e7arr")

[node name="ColorRect" type="ColorRect" parent="CPU"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 20.0
offset_bottom = 60.0
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CPU"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_8i1bb")

[node name="Ball" type="CharacterBody2D" parent="."]
position = Vector2(576, 324)
collision_mask = 3
script = ExtResource("4_3u0n0")

[node name="Trail2D" type="Line2D" parent="Ball"]
show_behind_parent = true
points = PackedVector2Array(-145, 345)
width_curve = SubResource("Curve_iaqog")
script = ExtResource("6_bcy2f")

[node name="ColorRect" type="ColorRect" parent="Ball"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("RectangleShape2D_arlr6")

[node name="Borders" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="Top" type="CollisionShape2D" parent="Borders"]
position = Vector2(576, -32)
shape = SubResource("RectangleShape2D_g85cf")

[node name="Border" type="CollisionShape2D" parent="Borders"]
position = Vector2(576, 674)
shape = SubResource("RectangleShape2D_hq05p")

[node name="ScoreLeft" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ScoreLeft"]
position = Vector2(-32, 324)
shape = SubResource("RectangleShape2D_jrrla")

[node name="ScoreRight" type="Area2D" parent="."]
position = Vector2(1216, 0)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ScoreRight"]
position = Vector2(-32, 324)
shape = SubResource("RectangleShape2D_jrrla")

[node name="Hub" type="CanvasLayer" parent="."]

[node name="CpuScore" type="Label" parent="Hub"]
offset_left = 648.0
offset_top = 2.0
offset_right = 698.0
offset_bottom = 52.0
theme_override_fonts/font = ExtResource("3_j7cvy")
theme_override_font_sizes/font_size = 50
text = "0"

[node name="PlayerScore" type="Label" parent="Hub"]
offset_left = 456.0
offset_top = 1.0
offset_right = 506.0
offset_bottom = 51.0
theme_override_fonts/font = ExtResource("3_j7cvy")
theme_override_font_sizes/font_size = 50
text = "0"

[node name="BallTimer" type="Timer" parent="."]
one_shot = true

[node name="BonusTimer" type="Timer" parent="."]
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)
script = ExtResource("7_j2nt2")

[connection signal="body_entered" from="ScoreLeft" to="." method="_on_score_left_body_entered"]
[connection signal="body_entered" from="ScoreRight" to="." method="_on_score_right_body_entered"]
[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
[connection signal="timeout" from="BonusTimer" to="." method="_on_bonus_timer_timeout"]
